<?xml version="1.0"?>
<package format="2">
  <name>hmap_on_board</name>
  <version>0.0.0</version>
  <description>The hmap_on_board package</description>
  <maintainer email="hs@todo.todo">hs</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>

  <export>

  </export>
</package>